Fix css problem of white space at the right when the browser expands over 1024px & sidenav opens

--- a/webclient/src/core/style/_variable.scss
+++ b/webclient/src/core/style/_variable.scss
@@ -13,3 +13,4 @@ $big-screen: 1025px;
 $transition-time: 130ms;
 $transition-timing-function: ease-in;
 $transition: $transition-time $transition-timing-function;
+$side-nav-max-width: 400px;
